post sweep, stable

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,9 @@
 /home/mc5635/yahtzee/yahtzee_rl/.gradio/
 /home/mc5635/yahtzee/yahtzee_rl/wandb/
+/home/mc5635/yahtzee/yahtzee_rl/saved_models/
+/home/mc5635/yahtzee/yahtzee_rl/param_sweep_models/
+/home/mc5635/yahtzee/yahtzee_rl/.gradio/
+/home/mc5635/yahtzee/yahtzee_rl/wandb/
+/home/mc5635/yahtzee/yahtzee_rl/saved_models/
+/home/mc5635/yahtzee/yahtzee_rl/param_sweep_models/
+param_sweep_models/
